Compiler/tests/errors/call_to_function_does_not_exist.jack
// This file is part of the materials accompanying the book 
// "The Elements of Computing Systems" by Nisan and Schocken, 
// MIT Press. Book site: www.idc.ac.il/tecs
// File name: projects/10/ArrayTest/Main.jack

/** Computes the average of a sequence of integers. */


    class Main {

    function void Main () {
    var int a;

        let a = real_function(3);
        let a = real_function(real_function(3));
        let a = real_function(call_to_fake_function());
        return;
    }

    function int real_function(int b) {
        return 3;
    }
}